@@ -77,7 +77,7 @@
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>s3</artifactId>
-            <version>2.20.44</version> <!-- ou a versão mais recente -->
+            <version>2.20.44</version>
         </dependency>
 
         <dependency>
@@ -196,7 +196,6 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
